Don't include "intrin.h" in anonymous namespace

"lz4.c" includes "intrin.h".  "lz4.c" itself is included into an
anonymous namespace, this causes link errors in MSVC 14.14.26428.
See https://bugzilla.mozilla.org/show_bug.cgi?id=1345331 for more
details.

Change-Id: Ibd5541d127c629b6b5c2424d2281fbda5070e0af