third_party/mozjs-45/mfbt/mfbt_Compression.cpp
@@ -14,6 +14,15 @@
 
 using namespace mozilla::Compression;
 
+// Because we wrap lz4.c in an anonymous namespace, all of its #includes
+// go in the anonymous namespace too. This would create conflicting
+// declarations for intrinsic functions that are internally defined
+// at top-level. Including intrin.h now prevents it from being included
+// later within the anonymous namespace.
+#ifdef _MSC_VER
+#include <intrin.h>
+#endif
+
 namespace {
 
 #include "lz4.c"
